# mySAGW

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE.md  compose.override.yaml  compose.prod.yaml  compose.staging.yaml  compose.yaml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  manage.py  next_deployment.md  setup.py  uwsgi.ini
.dependabot/: config.yml
.envs/.local/: .api  .caddy  .caluma  .dms  .keycloak  .minio  .postgres
.envs/.production.example/: .api  (+8 more)
.github/: dependabot.yml
api/: .dockerignore  .flake8  Dockerfile  manage.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-prod.txt  setup.cfg  setup.py  uwsgi.ini
api/caluma_data/: form-config.json  workflow-config.json
api/mysagw/: caluma_client.py  caluma_document_parser.py  conftest.py  dms_client.py  faker.py  filters.py  log.py  models.py  pdf_utils.py  permissions.py  serializers.py  settings.py  urls.py  utils.py  wsgi.py
api/mysagw/accounting/: apps.py  caluma_client.py  conftest.py  urls.py  views.py
api/mysagw/accounting/queries/: get_document_id.gql  get_receipts.gql
api/mysagw/accounting/templates/: accounting-cover.docx
api/mysagw/accounting/tests/: additional_data_caluma_response.py  test_views.py
api/mysagw/accounting/tests/__snapshots__/: test_views.ambr
api/mysagw/accounting/tests/snapshots/: snap_test_views.py
api/mysagw/caluma_extensions/: api_client.py  common.py  conftest.py  dynamic_tasks.py  permissions.py  validations.py  visibilities.py
api/mysagw/caluma_extensions/email/: send_email.py
api/mysagw/caluma_extensions/email/email_texts/: email_decision_and_credit_rejection_early_career_award.py  email_review_document_rejection_early_career_award.py
api/mysagw/caluma_extensions/events/: __init__.py  form.py  work_item.py
api/mysagw/caluma_extensions/tests/: test_dump.py  test_dynamic_tasks.py  test_events.py  test_permissions.py  test_validations.py  test_visibilities.py
api/mysagw/caluma_extensions/tests/__snapshots__/: test_visibilities.ambr
api/mysagw/case/: application_parser.py  apps.py  conftest.py  email_texts.py  factories.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
api/mysagw/case/email_texts/: case_transfer.py  invite.py
api/mysagw/case/management/commands/: import_caluma.py
api/mysagw/case/migrations/: 0001_initial.py  0002_simple_history_update.py
api/mysagw/case/queries/: get_acknowledgement.gql  get_credit_approval.gql  get_document.gql  get_document_id.gql
api/mysagw/case/templates/: acknowledgement-de.docx  acknowledgement-en.docx  acknowledgement-fr.docx  acknowledgement.docx  application.docx  credit-approval-de.docx  credit-approval-en.docx  credit-approval-fr.docx  credit-approval.docx
api/mysagw/case/tests/: application_caluma_response.py  test_case_views.py  test_signals.py
api/mysagw/case/tests/__snapshots__/: test_case_views.ambr
api/mysagw/case/tests/snapshots/: snap_test_case_views.py
api/mysagw/healthz/: apps.py  conftest.py  health_checks.py  urls.py  views.py
api/mysagw/healthz/tests/: test_healthz.py
api/mysagw/healthz/tests/__snapshots__/: test_healthz.ambr
api/mysagw/healthz/tests/snapshots/: snap_test_healthz.py
api/mysagw/identity/: apps.py  dms_client.py  export.py  factories.py  filters.py  helpers.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/mysagw/identity/management/commands/: generate_demo_data.py  upload_labels_template.py  upload_template.py
api/mysagw/identity/migrations/: 0001_initial.py  0002_salutation_and_language.py  0003_address_historicaladdress.py  0004_fix_salutation_choices.py  0005_email_and_phone_ordering.py  0006_address_addition.py  0007_organisation_types.py  0008_public_localized_interests.py  0009_identity_comment.py  0010_auto_20220209_1306.py  0011_simple_history_update.py  0012_add_sort_to_membershipsrole.py  0013_alter_historicalidentity_title_alter_identity_title.py  0014_historicalidentity_organisation_slug_and_more.py
api/mysagw/identity/templates/: identity-labels.docx
api/mysagw/identity/tests/: test_address_views.py  test_email_views.py  test_generate_demo_data_command.py  test_helpers.py  test_identity.py  test_identity_models.py  test_identity_view.py  test_identity_views.py  test_interest_views.py  test_me_view.py  test_me_views.py  test_membership_views.py  test_memberships.py  test_migrations.py  test_phone_number_views.py  test_upload_labels_template_command.py
api/mysagw/identity/tests/__snapshots__/: test_identity_models.ambr  test_identity_views.ambr  test_membership_views.ambr
api/mysagw/identity/tests/snapshots/: snap_test_identity_models.py  snap_test_identity_views.py
api/mysagw/oidc_auth/: authentication.py  models.py  permissions.py
api/mysagw/oidc_auth/tests/: test_authentication.py
api/mysagw/queries/: document_fragments.gql
api/mysagw/snippets/: apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
api/mysagw/snippets/migrations/: 0001_initial.py  0002_simple_history_update.py  0003_alter_snippet_options.py
api/mysagw/snippets/tests/: test_snippet_filters.py  test_snippet_views.py
api/mysagw/templates/: accounting-cover.docx  acknowledgement-de.docx  acknowledgement-en.docx  acknowledgement-fr.docx  application.docx  credit-approval-de.docx  credit-approval-en.docx  credit-approval-fr.docx  identity-labels.docx
api/mysagw/tests/: test_log.py
api/mysagw/tests/__snapshots__/: test_log.ambr
api/mysagw/user/: apps.py
api/mysagw/user/migrations/: 0001_initial.py
caddy/: Caddyfile
caluma/: Dockerfile  requirements.txt  setup.cfg
ember/: .dockerignore  .ember-cli  .eslintignore  .eslintrc.js  .gitignore  .template-lintrc.js  Dockerfile  ember-cli-build.js  nginx.conf  package.json  pnpm-lock.yaml  yarn.lock.orig
keycloak/: config.json  dev-config.json
mysagw/: conftest.py  settings.py  urls.py  wsgi.py
postgres/: init-db.sh
proxy/: nginx.conf
tools/: normalize.jq
(+611 files in other folders)
