[project]
name = "mysagw"
description = "Application management for SAGW"
license = "GPL-3.0-or-later"
version = "0.5.1"
authors = [{name = "Adfinis"}]
requires-python = '>=3.13,<4.0'
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-countries (>=7.6.1,<8.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-excel (>=0.0.10,<0.0.11)",
    "django-filter (>=25.1,<26.0)",
    "django-localized-fields (>=6.7,<7.0)",
    "django-phonenumber-field[phonenumberslite] (>=8.1.0,<9.0.0)",
    "django-postgres-extra (>=2.0.9,<3.0.0)",
    "django-simple-history (>=3.10.1,<4.0.0)",
    "django-watchman (>=1.3.0,<2.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-jsonapi (>=8.0.0,<9.0.0)",
    "drf-extra-fields (>=3.5.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "mozilla-django-oidc (>=4.0.1,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyexcel (>=0.7.3,<0.8.0)",
    "pyexcel-xlsx (>=0.6.1,<0.7.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "reportlab (>=4.4.3,<5.0.0)",
    "setuptools (==78.1.1)"  # needed for django-excel. Pinned because of build errors. See https://github.com/adfinis/mySAGW/issues/1176
]

[project.urls]
repository = "https://github.com/adfinis/mySAGW"


[tool.poetry]
requires-poetry = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "^4.1"
factory-boy = "^3.3.3"
freezegun = "^1.5.3"
gitlint = "^0.19.1"
pdbpp = "^0.11.7"
pre-commit = "^4.0.0"
psycopg2-binary = "^2.9.6"
pytest = "8.4.1"
pytest-cov = "^6.2.1"
pytest-django = "^4.11.1"
pytest-env = "^1.1.5"
pytest-factoryboy = "^2.8.1"
pytest-freezer = "^0.4.9"
pytest-mock = "^3.14.1"
pytest-randomly = "^3.16.0"
requests-mock = "^1.10.0"
ruff = "^0.12.5"
syrupy = "^4.9.1"

[tool.ruff]
exclude = [
    "migrations",
    "snapshots",
]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",     # `flake8-builtins` - Class attribute {name} is shadowing a Python builtin
    "ANN",      # `flake8-annotations`
    "ARG",      # `flake8-unused-arguments`
    "COM812",   # handled by ruff format
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D106",     # Missing docstring in public nested class
    "D107",     # Missing docstring in __init__
    "D202",     # No blank lines allowed after function docstring (found {num_lines})
    "D203",     # 1 blank line required before class docstring
    "D212",     # Multi-line docstring summary should start at the first line
    "DJ001",    #  flake8-django` - Avoid using null=True on string-based fields
    "E501",     # Line too long ({width} > {limit} characters) - managed by ruff format
    "ERA001",   # eradicate - Found commented-out code
    "FA100",    # `future-rewritable-type-annotation` - obsolete in python >= 3.9
    "FBT002",   # `flake8-boolean-trap` - Boolean default positional argument in function definition
    "FBT003",   # Boolean positional value in function call
    "FIX",      # `flake8-fixme`
    "ISC001",   # handled by ruff format
    "N818",     # Exception name {name} should be named with an Error suffix - https://github.com/astral-sh/ruff/issues/5367
    "PERF203",  # `try-except-in-loop` - obsolete in python >= 3.11
    "PGH005",   # doesn't work correctly with `requests-mock`
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
    "PT006",    # Wrong name(s) type in @pytest.mark.parametrize, expected {expected}
    "PT017",    # Found assertion on exception {name} in except block, use pytest.raises() instead
    "PLW2901",  # `for` loop variable `search_term` overwritten by assignment target
    "RET502",   # Do not implicitly return None in function able to return non-None value
    "RET503",   # Missing explicit return at the end of function able to return non-None value
    "RUF001",   # ambiguous-unicode-character-string
    "RUF012",   # Mutable class attributes should be annotated with typing.ClassVar
    "S101",     # Use of assert detected
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
    "TID252",   # banned-module-level-imports
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["mysagw", "caluma"]
combine-as-imports = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"manage.py" = ["INP001"]

[tool.pytest.ini_options]
addopts = "--reuse-db --randomly-seed=1521188766 --randomly-dont-reorganize"
DJANGO_SETTINGS_MODULE = "mysagw.settings"
env = [
    "ADMINS=Test Example <test@example.com>,Test2 <test2@example.com>",
    "OIDC_OP_USER_ENDPOINT=mock://mysagw.github.com/openid/userinfo",
    "OIDC_BEARER_TOKEN_REVALIDATION_TIME=60",
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    "ignore:invalid escape sequence",  # needed for deprecation == "2.0.7" (dependency of localized-fields)
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",  # needed until this is resolved: https://github.com/SmileyChris/django-countries/issues/439
    "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",  # issue in pytest-freezegun
    "ignore:CSR support in pyOpenSSL is deprecated. You should use the APIs in cryptography.:DeprecationWarning", # deprecation in a dependency of mozilla-django-oidc
    "ignore:.*Use timezone-aware objects to represent datetimes in UTC.*:DeprecationWarning", # deprecation in openpyxl
]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "pragma: todo cover",
    "def __str__",
    "def __unicode__",
    "def __repr__",
]
omit = [
    "*/migrations/*",
    "*/apps.py",
    "manage.py",
    "mysagw/settings_*.py",
    "mysagw/wsgi.py",
]
show_missing = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
